<resources>
    <string name="app_name">Lets Go Shoppin</string>

    <!-- For navigation drawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="under_development">Under Development</string>

    <!-- Other -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="user_login_id">Mobile Number</string>
    <string name="preferred_store">Preferred Store :</string>

    <!-- Error messages -->
    <string name="error_title">Error : </string>
    <string name="error_app_update">Need to update app</string>
    <string name="error_technical_problem">Having some technical problem</string>
    <string name="error_internet_check">Internet connection is not available. Please enable wifi or internet data.</string>
    <string name="error_required">Required</string>
    <string name="error_card_expires">Card Expires</string>
    <string name="error_valid_suburb">Select valid suburb</string>
    <string name="error_confirm_password">Password and Confirm Password must be same</string>
    <string name="error_checkout_address">Please select address</string>
    <string name="error_checkout_date_time">Please select date and time</string>
    <string name="error_order_onhold">Your order is on hold</string>
    <string name="error_order_cancelled">Your order is cancelled</string>

    <!-- Textview -->
    <string name="text_dont_have_account">Don\'t have an account</string>
    <string name="text_already_have_account">Already have an account</string>
    <string name="text_or">Or</string>
    <string name="text_explore_guest">Explore as</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_pay">Pay</string>
    <string name="text_pay_now">Pay Now</string>
    <string name="text_price">Price</string>
    <string name="text_discount_and_saving">Discount n Saving</string>
    <string name="text_coupon_discount">Coupon Discount</string>
    <string name="text_total">Total</string>
    <string name="text_apply">Apply</string>
    <string name="text_address">Address</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_expires">Expires</string>
    <string name="text_cvv">CVV</string>
    <string name="text_congratulations">Congratulations!</string>
    <string name="text_continue_shopping">Continue Shopping</string>
    <string name="text_payment_success">Thank you for shopping with us. Your order has been successfully placed. Shopper will call you.</string>
    <string name="text_select_near_by_store">Select Near By Store</string>
    <string name="text_repeat">Repeat</string>


    <!-- Edit text hint-->
    <string name="edittext_hint_mobile_number">Mobile Number</string>
    <string name="edittext_hint_password">Password</string>
    <string name="edittext_hint_name">Name</string>
    <string name="edittext_hint_street">Street</string>
    <string name="edittext_hint_suburb">Suburb</string>
    <string name="edittext_hint_town">Town</string>
    <string name="edittext_hint_postcode">Postcode</string>
    <string name="edittext_hint_confirm_password">Confirm Password</string>
    <string name="edittext_hint_coupon_code">Coupon Code</string>
    <string name="edittext_hint_credit_card_number">1234567812345678</string>
    <string name="edittext_hint_credit_card_expire_date">MM/YY</string>
    <string name="edittext_hint_credit_card_cvv">123</string>

    <!-- Button text -->
    <string name="button_signin">Sign In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_guest">Guest</string>
    <string name="button_go">Go</string>
    <string name="button_update">Update</string>
    <string name="button_done">Done</string>

    <!--dialog -->
    <string name="dialog_title_guest">Guest Login</string>
    <string name="dialog_title_address">Address</string>

    <!-- Menu Action -->
    <string name="action_search_product">Search</string>
    <string name="action_view_cart">Cart</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_new_address">New Address</string>

    <!--Toast message-->
    <string name="msg_copy_clipboard">Text copied to clipboard</string>

    <!--Title -->
    <string name="activity_address">Address</string>
    <string name="activity_checkout">Checkout</string>
    <string name="activity_choose_delivery_option">Choose Delivery Option</string>
    <string name="activity_credit_card">Credit Card</string>
    <string name="fragment_myaccount">My Account</string>
    <string name="fragment_store_list">Near By Store</string>

    <!-- Order Status -->
    <string name="order_accepted">Accepted</string>
    <string name="order_purchasing">Purchasing</string>
    <string name="order_shipping">Shipping</string>
    <string name="order_completed">Completed</string>

    <!-- Product status -->
    <string name="product_available">Available</string>
    <string name="product_not_available">Not Available</string>

    <string name="toast_address_add">Address added successfully</string>
    <string name="toast_address_update">Address updated successfully</string>

    <string name="alert_message_remove_product">Do you want to remove %1$s ?"</string>

</resources>
