<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_payment_successful"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_thank_you" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/margin_small"
            android:text="@string/text_congratulations"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_splash_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/text_payment_success"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_toolbar_title" />

        <TextView
            android:id="@+id/txtContinueShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/button_background_green"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/text_continue_shopping"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_toolbar_title" />

    </LinearLayout>
</RelativeLayout>
