<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/bg_dialog_round_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:padding="@dimen/margin_small"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/dialog_title_guest"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:padding="@dimen/margin_small"
                android:text="@string/button_go"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold" />

        </LinearLayout>


        <AutoCompleteTextView
            android:id="@+id/atxSuburb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/edittext_bottom_line_green"
            android:drawableLeft="@mipmap/ic_profile"
            android:drawablePadding="@dimen/margin_tiny"
            android:hint="@string/edittext_hint_suburb"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="@dimen/margin_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/app_theme_1"
            android:textSize="@dimen/font_size_edittext" />

        <!--        <TextView
                    android:id="@+id/txtGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/button_background_green"
                    android:gravity="center"
                    android:padding="@dimen/margin_button"
                    android:text="@string/button_go"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_button"
                    android:textStyle="bold" />-->
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_round_bottom" />
    </LinearLayout>
</LinearLayout>