<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme_1"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_medium">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etxName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_gray"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/etxPhone"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_edittext" />

            <EditText
                android:id="@+id/etxPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_gray"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_mobile_number"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_edittext" />

            <EditText
                android:id="@+id/etxStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_gray"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_street"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_edittext" />

            <AutoCompleteTextView
                android:id="@+id/atxSuburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_gray"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_suburb"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/etxPostcode"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_edittext" />

            <!--<EditText-->
            <!--android:id="@+id/etxTown"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/margin_medium"-->
            <!--android:background="@drawable/edittext_bottom_line_gray"-->
            <!--android:drawablePadding="@dimen/margin_tiny"-->
            <!--android:hint="@string/edittext_hint_town"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:paddingBottom="@dimen/margin_edittext_bottom"-->
            <!--android:textColor="@color/gray"-->
            <!--android:textColorHint="@color/gray"-->
            <!--android:textSize="@dimen/font_size_edittext" />-->


            <EditText
                android:id="@+id/etxPostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/edittext_bottom_line_gray"
                android:drawablePadding="@dimen/margin_tiny"
                android:hint="@string/edittext_hint_postcode"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_edittext_bottom"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_edittext" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/progressbar" />

</LinearLayout>